# InfinyToolkit

./: Authors.md  CMakeLists.txt  InfinyToolkitConfig.cmake.in  InteractionToolsConfig.cmake.in  PluginInfinyToolkit.txt  PluginInteractionTools.txt  README.md  SleeveConfig.cmake.in  SleevePinceManager.h  SleevePositionsMapper.h  initSleevePlugin.cpp
.github/workflows/: ci.yml
Sleeve/: CMakeLists.txt  SleevePinceManager.cpp  SleevePositionsMapper.cpp  config.h  initSleevePlugin.cpp
doc/: Scripts.md
examples/: ArticulatedToolManager.scn  BeatingCube.scn  BeatingCube_moving.scn  CollisionDetectionDisplay.scn  Cube_AdvCarvingTexcoords.scn  Cube_AdvCarvingWithRefinement.scn  Cube_AdvCarvingWithRefinementTexcoords.scn  Cube_Carving.scn  Cube_CarvingTexcoords.scn  Cube_CarvingWithPenetration.scn  Cube_CarvingWithRefinement.scn  Cube_CarvingWithRefinementTexcoords.scn  Geomagic-ACarving-tetra2triangle.scn  Geomagic-ACarving.scn  Geomagic-ACarvingWithRefinement.scn  Geomagic-ACarvingWithRefinement.scn.qglviewer.view  Geomagic-AdvCarving.scn  Geomagic-AdvCarving.scn.qglviewer.view  Geomagic-AdvCarvingWithRefinement.scn  Geomagic-AdvCarvingWithTexCoords.scn  Geomagic-AdvCarvingWithTexCoords.scn.qglviewer.view  Geomagic-SurfaceCarving.scn  Geomagic_RigidCube_AdvCarving.scn  MotionReplayController.scn  NearestTexcoordsMap.scn  NearestTexcoordsMap_options.scn  ProximityOscillatorConstraint.scn  ProximityOscillatorConstraint.scn.view  RegressionStateScenes.regression-tests  RegressionTopologyScenes.regression-tests  RigidCube_CarvingWithRefinement.scn  TetrahedronBeamMultiMaterials.scn  TextureTransferEngine.scn  Triangle2RefinedTriangleTopologicalMapping.scn  VirtualTools.xml
examples/mesh/: Cautery-Hook.mtl  Liver.mtl  cube_01.msh  cube_02.msh  cube_03.msh  liver_light_visu.mtl  liver_low_volume.msh  liver_visu.mtl  liver_volume.msh
regression/: regression_tests.py
scripts/: Notes.txt  changeComponentName_script.py  changeLoader_script.py  component_scripts.py  header_script.py  oglLoader_script.py  oglPlugin_script.py  required_plugin.py  runBenchmarks_script.py  topologyAlgo_script.py
src/InfinyToolkit/: BruteForceFeedback.cpp  BruteForceFeedback.h  CenterLineForceField.cpp  CenterLineForceField.h  CenterLineForceField.inl  CollisionDetectionDisplay.cpp  CollisionDetectionDisplay.h  HapticEmulator.cpp  HapticEmulator.h  MiddleForceField.cpp  MiddleForceField.h  MiddleForceField.inl  MyComponent.cpp  MyComponent.h  MyComponent.inl  NeedleTracker.cpp  NeedleTracker.h  PliersPositionsMapper.cpp  PliersPositionsMapper.h  PliersToolManager.cpp  PliersToolManager.h  ProximityOscillatorConstraint.cpp  ProximityOscillatorConstraint.h  ProximityOscillatorConstraint.inl  RotationEngine.cpp  RotationEngine.h  Triangle2RefinedTriangleTopologicalMapping.cpp  Triangle2RefinedTriangleTopologicalMapping.h  config.h.in  initInfinyToolkit.cpp  initInfinyToolkit.h  initInfinyToolkitPlugin.cpp
src/InfinyToolkit/CarvingTools/: AdvancedCarvingManager.cpp  AdvancedCarvingManager.h  BaseCarvingPerformer.cpp  BaseCarvingPerformer.h  BurningPerformer.cpp  BurningPerformer.h  CuttingPerformer.cpp  CuttingPerformer.h  HapticCarvingManager.cpp  HapticCarvingManager.h  RefineCarvingPerformer.cpp  RefineCarvingPerformer.h  SimpleCarvingPerformer.cpp  SimpleCarvingPerformer.h  SurfaceCarvingPerformer.cpp  SurfaceCarvingPerformer.h
src/InfinyToolkit/IVUSController/: IVUSController.cpp  IVUSController.h
src/InfinyToolkit/InteractionTools/: ArticulatedToolManager.cpp  ArticulatedToolManager.h  BaseJawModel.cpp  BaseJawModel.h  GrasperJawModel.cpp  GrasperJawModel.h  ScissorJawModel.cpp  ScissorJawModel.h
src/InfinyToolkit/MeshTools/: GridBarycentersPositions.cpp  GridBarycentersPositions.h  NearestTexcoordsMap.cpp  NearestTexcoordsMap.h  TriangleCuttingController.inl
src/InfinyToolkit/MotionReplayController/: MotionReplayController.cpp  MotionReplayController.h  MotionReplayController.inl
src/InfinyToolkit/MouseCarvingOperation/: CarvingOperation.cpp  CarvingOperation.h  QCarvingOperation.cpp  QCarvingOperation.h
src/InteractionTools/: AdvanceCarvingManager.cpp  AdvanceCarvingManager.h  BruteForceFeedback.cpp  BruteForceFeedback.h  HapticCarvingManager.cpp  HapticCarvingManager.h  HapticEmulator.cpp  HapticEmulator.h  MiddleForceField.cpp  MiddleForceField.h  MiddleForceField.inl  NeedleTracker.cpp  NeedleTracker.h  PliersPinceManager.cpp  PliersPositionsMapper.cpp  PliersPositionsMapper.h  PliersToolManager.cpp  PliersToolManager.h  RotationEngine.cpp  RotationEngine.h  SurfaceCarvingManager.cpp  SurfaceCarvingManager.h  config.h  config.h.in  initInteractionToolsPlugin.cpp
src/InteractionTools/CarvingTools/: AdvancedCarvingManager.cpp  AdvancedCarvingManager.h  BaseCarvingPerformer.cpp  BaseCarvingPerformer.h  BurningPerformer.cpp  BurningPerformer.h  HapticCarvingManager.cpp  HapticCarvingManager.h  RefineCarvingPerformer.cpp  RefineCarvingPerformer.h  SurfaceCarvingManager.cpp  SurfaceCarvingManager.h  SurfaceCarvingPerformer.cpp  SurfaceCarvingPerformer.h
src/PliersTools/: SleevePinceManager.cpp  initSleevePlugin.cpp
